--- a/cli/src/app/features/problems/problem-detail/problem-detail.component.html
+++ b/cli/src/app/features/problems/problem-detail/problem-detail.component.html
@@ -200,7 +200,7 @@
                   }}
                 </span>
                 <span class="text-xs text-gray-500 dark:text-gray-400">{{
-                  getCategoryName()
+                  categoryName || 'Unknown'
                 }}</span>
               </div>
             </div>
